# sx

./: README.md  dune-project  invalid.json  invalid.yaml  sx.config  sx.opam  test.yml  test_array.json
examples/invalid-data/: invalid.toml
examples/valid-data/: api-response.json  kubernetes-deployment.yaml  server-config.toml
lib/cli/: args.ml  dune  io.ml
lib/generators/: common_lisp.ml  dune  scheme.ml
lib/parsers/: detect.ml  dune  json.ml  toml.ml  yaml_parser.ml
lib/sx/: ast.ml  config.ml  dune  error.ml  inspector.ml  position.ml  profiler.ml
scripts/: verify.sh
streaming_test/: catsoundsarray.py  catsoundslines.py
test-data/invalid-data/: invalid.json
test-data/valid-data/: config.yaml  logs.jsonl  test.json  test.toml
tests/: README.md  dune  run_tests.ml
tests/fixtures/invalid/: bad.json  bad.yaml
tests/fixtures/medium_files/: data.json  logs.jsonl
tests/fixtures/valid/: app.toml  config.json  server.yaml  test.config
tests/integration/: dune  test_auto_detect.ml  test_batch.ml  test_cli.ml  test_streaming.ml
tests/property/: dune  test_basic_invariants.ml
tests/unit/: dune  test_config.ml  test_error_handling.ml  test_generators.ml  test_parsers.ml
